<resources>
    <string name="app_name">PerfEGGtion</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">open?</string>
    <string name="navigation_drawer_close">close?</string>
    <string name="drawer_open">open?</string>
    <string name="drawer_close">close?</string>
    <string name="openDrawer">opendrawer?</string>
    <string name="closeDrawer">closedrawer?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_about">About PerfEGGtion</string>
    <string name="drawer_about">About</string>
    <string name="prefs_web_page">Open Developer Website</string>
    <string name="resetprefssummary">Restore preferences to their default values?</string>
    <string name="resetprefs">Reset preferences</string>
    <string name="pref_misc">Miscellaneous Settings</string>
    <string name="pref_general">General Settings</string>
    <string name="notification">Notification</string>
    <string name="notificationsummary">Display notification when timer is running</string>
    <string name="title_activity_settings">Settings</string>
    <string name="alertresettext">Are you sure you want to reset all settings to their default values?</string>
    <string name="alert_dialog_yes">Yes</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="alert_reset">Reset Settings?</string>
    <string name="notifDone">Done!</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="textviewtimeMINS">Minutes</string>
    <string name="textviewtimeSECS">Seconds</string>
    <string name="time_select_alert_dialog_title">Custom Timer Duration</string>
    <string name="notification_done">Done!</string>
    <string name="playalarm">Alarm</string>
    <string name="playalarmsummary">Play alarm when timer finishes?</string>
    <string name="preference_alarm_tone">Alarm tone</string>
    <string name="preference_alarm_tone_summary">Choose alarm tone</string>
    <string name="onlybackgroundpreference">Notification in background only?</string>
    <string name="onlybackgroundpreferencesummary">Only display notification if Snacktest is in the background</string>
    <string name="pref_version">Version</string>
    <string name="snackbar_timer_stopped">Timer stopped</string>
    <string name="snackbar_undo_timer_stopped">Undo</string>
    <string name="notif_timer_paused">Timer paused</string>
    <string name="alert_dialog_conflict_title">Warning: timer already running</string>
    <string name="about_text">pt cruiser

Butterknife:
        License

Copyright 2013 Jake Wharton

Licensed under the Apache License, Version 2.0 (the License);
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

   http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an AS IS BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License."

    Google ICONS ZOZIOBAR
        https://creativecommons.org/licenses/by/4.0/legalcode
    </string>
    <string name="preference_vibrator_title">Vibration</string>
    <string name="preference_vibrator_summary">Vibrate when timer finishes</string>
    <string name="preference_led_title">LED</string>
    <string name="preference_led_summary">Flash LED when timer finishes</string>
    <string name="snackbar_timer_paused">Timer paused</string>
    <string name="snackbar_undo_timer_paused">Resume</string>
    <string name="timer_conflict">Stop currently running timer in order to start a new one?</string>
    <string name="notif_title">PerfEGGtion</string>
    <string name="recipe_title_label">recipetitlelable</string>
    <string name="recipe_title_hint">recipehint</string>
    <string name="recipe_details_label">recipedetails</string>
    <string name="new_recipe_dialog_title">New recipe</string>
    <string name="recipe_title_list_fragment">Recipe Title: %s</string>
    <string name="recipe_duration_list_fragment">Duration: %d seconds</string>
    <string name="string_done">Done</string>
    <string name="reset_search">Reset</string>
    <plurals name="minutes_remaining">
        <item quantity="one">1 minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <plurals name="seconds_remaining">
        <item quantity="one">1 second.</item>
        <item quantity="other">%d seconds.</item>
    </plurals>
</resources>
